--- a/apps/android/app/src/main/res/values/strings.xml
+++ b/apps/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Deadbot</string>
+    <string name="app_name">Cloned</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="email">Email</string>
